1999-02-23  Andrew T. Veliath  <andrewtv@usa.net>

	* Update version to 0.6.0.

	* parser.y: Improve module identifier conflict error message.

	* IDL.h.new.in: Improved version codes.

	* parser.y: Allow inhibits on codefrags, operations and
	attributes.

1999-02-22  Andrew T. Veliath  <andrewtv@usa.net>

	* IDL_tree_func tree parameter changed to a structure, which
	contains up paths of the traversal and the real up path (in the
	case of identifiers referenced elsewhere after definition).  The
	original parameter is now in the tree member. IDL_tree_to_IDL
	rewritten to automatically determine scoping using this
	information, instead of the previous scope passing. This should
	make any future additions require fewer source changes.

	* Improvements to structure and union handling, IDL_tree_to_IDL,
	and IDL_tree_walk.

1999-02-21  Andrew T. Veliath  <andrewtv@usa.net>

	* Fully convert to glib memory routines.

1999-02-19  Andrew T. Veliath  <andrewtv@usa.net>

	* parser.y: Properties for parameters moved before direction
	keyword.

	* Configuration and versioning system overhauled.

1999-02-18  Andrew T. Veliath  <andrewtv@usa.net>

	* Update version to 0.5.10.

	* util.c (IDL_tree_properties_copy): New function.
	(IDL_parse_filename_with_input): Mostly ignore
	HAVE_CPP_PIPE_STDIN.

	* parser.y: Make codefrags work inside interfaces (only at outer
	level). Allow properties for operations and attributes, and change
	all XPIDL node properties to reside on the ident node.

1999-02-12  Andrew T. Veliath  <andrewtv@usa.net>

	* parser.y: Allow forward decls to be suppressed as well.

	* util.c (yyerrorl, yywarningl): Only call g_basename if we aren't
	piping input from CPP.

1999-02-11  Andrew T. Veliath  <andrewtv@usa.net>

	* Update version to 0.5.9.

1999-02-09  Tom Tromey  <tromey@cygnus.com>

	* libIDL.texi: Use @pxref and not @xref in parentheses.

1999-02-06  Andrew T. Veliath  <andrewtv@usa.net>

	* parser.y: Detect recursive structure members.
