@@ -73,6 +73,8 @@ extern void		IDL_tree_remove_empty_modules	(IDL_tree *p, IDL_ns ns);
 
 extern void		__IDL_free_properties		(GHashTable *table);
 extern void		__IDL_assign_up_node		(IDL_tree up, IDL_tree node);
+extern void		__IDL_assign_location		(IDL_tree node, IDL_tree from_node);
+extern void		__IDL_assign_this_location	(IDL_tree node, char *filename, int line);
 
 #ifndef HAVE_CPP_PIPE_STDIN
 extern char *				__IDL_tmp_filename;
